--- a/06_ergebnisse.tex
+++ b/06_ergebnisse.tex
@@ -73,17 +73,8 @@ Der gesamte Molenstrom an einer Stelle wird anschließend unter Zuhilfenahme des
 \end{flalign}
 \subsection{Berechnung des Molenstromes im Sumpf}
 
-Aus den Bilanzgleichungen \eqref{gl:gesamtmolbilanzKOLONNE} und \eqref{gl:komponentenbilanzKOLONNE} ergibt sich ein überbestimmtes Gleichungssystem. Die Berechnung des Molenstromes im Sumpf der Kolonne erfolgt durch Anwendung des Excel-Add-inns \emph{solver}. Der Feed-Molenstrom wird aufgrund der größten Fehleranfälligkeit als veränderliche Größe markiert. Nebenbedingung für die Lösung ist, dass  \eqref{gl:gesamtmolbilanzKOLONNE} und \eqref{gl:komponentenbilanzKOLONNE} den selben wert annehmen. Für die Daten des ersten Versuches folgt ein Sumpf-Molenstrom von \SI{245,335}{\mole\per\hour}. Der Feed-Molenstrom wird durch die Anwendung von ursprünglich \SI{225,39}{\mole\per\hour} auf \SI{236,99}{\mole\per\hour} angehoben. 
+Aus den Bilanzgleichungen \eqref{gl:gesamtmolbilanzKOLONNE} und \eqref{gl:komponentenbilanzKOLONNE} ergibt sich ein überbestimmtes Gleichungssystem. Die Berechnung des Molenstromes im Sumpf der Kolonne erfolgt durch Anwendung des Excel-Add-inns \emph{solver}. Der Feed-Molenstrom wird aufgrund der größten Fehleranfälligkeit als veränderliche Größe markiert. Nebenbedingung für die Lösung ist, dass  \eqref{gl:gesamtmolbilanzKOLONNE} und \eqref{gl:komponentenbilanzKOLONNE} den selben wert annehmen. Für die Daten des ersten Versuches folgt ein Sumpf-Molenstrom von \SI{227,27}{\mole\per\hour}. Der Feed-Molenstrom wird durch die Anwendung von ursprünglich \SI{225,39}{\mole\per\hour} auf \SI{235,60}{\mole\per\hour} angehoben. 
 
-\subsection{Berechnung der Heizleistung}
-
-Die Berechnung der Heizleistung in Watt beruht auf der verbrauchten Energie über einen gewissen Zeitraum. Definitionsgemäß kann daher die Heizleistung entsprechend der nachfolgenden Gleichung \eqref{gl:Qheizung} berechnet werden.
-
-\begin{flalign}\label{gl:Qheizung}
-	\dot{Q}_{Heizung}&=\frac{Q_{Heizung}[W*h]}{t[s]/3600}\\
-	&=\frac{\SI{358,3}{\watt\hour}}{\SI{1049}{\second}/3600}\\
-	&=\underline{\SI{1229,36}{\watt}}
-\end{flalign}
 
 \subsection{Rücklaufverhältnis}
 Bei einem stationären Betrieb der Rektifikationskolonne im thermischen Gleichgewicht ist auch der Volumenstrom an Kopfprodukt stationär. Daher können für das Rücklaufverhältnis auch die Zeiten eingesetzt werden, in welchen das Magnetventil den jeweiligen Weg freigibt. Dabei wurde die sich auf dem Verschlussstopfen gesammelte Flüssigkeitspfütze berücksichtigt.
@@ -102,13 +93,19 @@ Nachdem die Ethanolanteile von Kopfprodukt, Feed und Sumpfprodukt als senkrechte
 \vspace{-2mm}
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=1\linewidth]{img/McCabe}
+	\includegraphics[width=0.7\linewidth]{img/McCabe}
 	\caption{Das Gleichgewichtsdiagramm des Versuch 1 mit der resultierenden Stufenkonstruktion}
 	\label{fig:McCabe}
 \end{figure}
-
+\FloatBarrier
 \subsection{Energiebilanz}
-Um in die Gleichung \eqref{gl:energiebilanzKOLONNE} als Energiebilanz einsetzen zu können, müssen zuerst die Enthalpien der Ströme berechnet werden.
+Um in die Gleichung \eqref{gl:energiebilanzKOLONNE} als Energiebilanz einsetzen zu können, müssen zuerst die Enthalpien der Ströme berechnet werden. Für diese wiederum ist die spezifische Wärmekapazität erforderlich. Außerdem muss die Kühl und Heizleistung bekannt sein. Die Berechnungen sind in den nachfolgenden Abschnitten detailliert aufgeführt. Die Gleichung \eqref{gl:Energie-eingesetzt} enthält die eingesetzten Zwischenergebnisse. Durch diese Energiebilanz lässt sich die Verlustwärme berechnen. Diese beträgt im ersten Versuch \SI{637,5}{\watt}.
+\begin{flalign}\label{gl:Energie-eingesetzt}
+\dot{H}_F+Q_{Heiz}&=\dot{H}_K+\dot{H}_S+Q_{Kondensator}+Q_{Verlust}\\
+	\SI{108,29}{\watt}+\SI{1229,36}{\watt}&=\SI{21,66}{\watt}+\SI{475,94}{\watt}+\SI{202,55}{\watt}+Q_{Verlust}\\
+	Q_{Verlust}&=\underline{\SI{637,5}{\watt}}
+\end{flalign}
+
 \subsubsection{Wärmekapazitäten}
 Die Wärmekapazitäten der Mischungen, werden durch Wichtung der Wärmekapazitäten der Reinstoffe, bei der gemessenen Temperatur, mit den Molenbrüchen, nach Gleichung \eqref{gl:cp} berechnet. Die Wärmekapazität der Reinstoffe ist durch dir Regressionsgleichung \eqref{gl:regCP} und die tabellierten Konstanten A, B, C, D und E gegeben.
 \begin{equation}\label{gl:regCP}
@@ -118,4 +115,36 @@ Die Wärmekapazitäten der Mischungen, werden durch Wichtung der Wärmekapazitä
 	\bar{c_p}(K)&=x_1*c_{p1}+x_2*c_{p2}\\
 	&=0,68*\SI{138673}{\joule\per\kilo\mole\per\kelvin}+(1-0,68)*\SI{75569}{\joule\per\kilo\mole\per\kelvin}\\
 	&=\underline{\SI{118481,84}{\joule\per\kilo\mole\per\kelvin}}
+\end{flalign}
+
+\subsubsection{Enthalpien der Ströme}
+
+\begin{flalign}
+	\dot{H}&=\dot{n}*cp*\Delta T\\
+	\dot{H}_K&=\dot{n}_K*c_{pK}*\Delta T_K\\
+	&=\SI{8,34}{\mole\per\hour}*\SI{118481,84}{\joule\per\kilo\mole\per\kelvin}*\SI{78,9}{\kelvin}\\
+	&=\underline{\SI{21,66}{\watt}}\\%===================
+	\dot{H}_F&=\dot{n}_F*c_{pF}*\Delta T_F\\
+	&=\SI{236,995}{\mole\per\hour}*\SI{76386,75}{\joule\per\kilo\mole\per\kelvin}*\SI{21,65}{\kelvin}\\
+	&=\underline{\SI{108,29}{\watt}}\\
+		\dot{H}_S&=\dot{n}_S*c_{pS}*\Delta T_S\\
+		&=\SI{227,27}{\mole\per\hour}*\SI{76112,46}{\joule\per\kilo\mole\per\kelvin}*\SI{99,05}{\kelvin}\\
+		&=\underline{\SI{475,94}{\watt}}\\
+\end{flalign}
+\subsubsection{Kühlleistung}
+
+\begin{flalign}
+	\dot{Q}&=\dot{m}*c_p*\Delta T\\
+	&=(\rho*\dot{V})*c_p*(T_\omega-T_\alpha)\\
+	&=(\SI{999,38}{\kilogram\per\cubic\meter}*\SI{28,25e-3}{\cubic\meter\per\hour})*\SI{4200}{\joule\per\kilogram\per\kelvin}*(\SI{19,45}{\degreeCelsius}-\SI{13,3}{\degreeCelsius})*\si{\kelvin}\\
+	&=\underline{\SI{202,55}{\watt}}
+\end{flalign}
+\subsubsection{Berechnung der Heizleistung}
+
+Die Berechnung der Heizleistung in Watt beruht auf der verbrauchten Energie über einen gewissen Zeitraum. Definitionsgemäß kann daher die Heizleistung entsprechend der nachfolgenden Gleichung \eqref{gl:Qheizung} berechnet werden.
+
+\begin{flalign}\label{gl:Qheizung}
+\dot{Q}_{Heizung}&=\frac{Q_{Heizung}[W*h]}{t[s]/3600}\\
+&=\frac{\SI{358,3}{\watt\hour}}{\SI{1049}{\second}/3600}\\
+&=\underline{\SI{1229,36}{\watt}}
 \end{flalign}
