--- a/01_titel.tex
+++ b/01_titel.tex
@@ -35,7 +35,7 @@ Thermische Verfahrenstechnik\\
 \end{center}
 
 \begin{center}
-	\large{Gruppe 2.4 (BCUC4)}
+	\large{Datensatz J}
 \end{center}
 
 
