--- a/03_aufgabenstellung.tex
+++ b/03_aufgabenstellung.tex
@@ -2,7 +2,7 @@
 \pagebreak
 \section{Einleitung}
 \label{sec:einleitung}
-
+Im Praktikumsversuch wird die Abhängigkeit von Kopf- und Sumpfprodukt-Konzentration vom Rücklaufstrom und der Heizleistung untersucht. Es steht dazu eine Glockenbodenkolonne mit einem Ethanol-Wasser-Gemisch bereit. Die Betriebszustände sollen in McCabe-Thiele-Diagrammen dargestellt werden. Die aus der Stufenkonstruktion bestimmte Anzahl dheoretischer Trennstufen wird hernach mit der wirklichen Anzahl verglichen. Die Anlage wird zudem in stofflicher und energetischer Hinsicht bilanziert.
 
 
 
