--- a/04_geraete.tex
+++ b/04_geraete.tex
@@ -4,21 +4,18 @@
 
 \textbf{Geräte:}
 \begin{itemize}
-\item 
-\item 
-\item 
-\item 
-\item
+\item Rektifikationsanlage
+\item Dichte-Messgerät
+\item Spritze
+\item Bechergläser
 \end{itemize}
 
 \vspace*{5mm}
 
 \textbf{Proben/Chemikalien:}
 \begin{itemize}
-\item 
-\item 
-\item 
-\item 
+\item Wasser
+\item Ethanol
 
 \end{itemize}
 
