--- a/07_diskussion.tex
+++ b/07_diskussion.tex
@@ -2,4 +2,6 @@
 \section{Diskussion}
 \label{sec:diskussion}
 
+Die Zahl der theoretischen Trennstufen aus der Stufenkonstruktion im McCabe-Thiele-Diagramm nimmt mit sinkender Kopfproduktreinheit ab. Wo für den Versuch 1 noch 6 Stufen konstruiert wurden, waren für den Versuch 2 nur noch 5 und für den Versuch noch 4 Stufen nötig. Natürlich blieb die Bodenzahl in der Versuchskolonne gleich. Die wirkliche Anzahl der Böden liegt immer weit über der theoretischen Zahl.
 
+Aus den Berechnungen geht hervor, dass der Kopfproduktstrom bei sinkendem Rücklaufverhältnis ansteigt. Mit dem Rücklaufverhältnis sinkt aber auch die Konzentration an Leichtsieder im Produkt.
