--- a/05_durchfuerung.tex
+++ b/05_durchfuerung.tex
@@ -1,2 +1,3 @@
 \section{Durchführung}
 \label{sec:durchfuerung}
+Der Versuch wurde nicht selbst durchgeführt. Die nachfolgende grobe Beschreibung des Versuchsablaufes basiert auf einem Videofilm, welcher freundlicher Weise zur Verfügung gestellt wurde. 
