--- a/04_geraete.tex
+++ b/04_geraete.tex
@@ -5,7 +5,7 @@
 \textbf{Geräte:}
 \begin{itemize}
 \item Rektifikationsanlage
-\item Dichte-Messgerät
+\item Mettler-Toledo Density Meter DE-40
 \item Spritze
 \item Bechergläser
 \end{itemize}
