--- a/05_durchfuerung.tex
+++ b/05_durchfuerung.tex
@@ -1,3 +1,9 @@
 \section{Durchführung}
 \label{sec:durchfuerung}
-Der Versuch wurde nicht selbst durchgeführt. Die nachfolgende grobe Beschreibung des Versuchsablaufes basiert auf einem Videofilm, welcher freundlicher Weise zur Verfügung gestellt wurde. 
+Der Versuch wurde nicht selbst durchgeführt. Die nachfolgende grobe Beschreibung des Versuchsablaufes basiert auf einem Videofilm, welcher freundlicher Weise zur Verfügung gestellt wurde. \\
+Zu beginn gilt es die Strom und Kühlwasserzufuhr freizugeben. Der Kühlwasserstrom sollte sich zwischen \SI{25}{\liter} und \SI{50}{\liter} betragen. Die Heizung wird zum Hochfahren der Anlage auf 80\% ihrer Leistung engestellt. später kann die Leistung auf 41\% herunter geregelt werden. Die Überwachung der Anlage erfolgt am PC, wo das Programm \emph{Destillation} einen Kernbildschirm erzeugt.
+Die Sammelbehälter werden erst einmal geleert. Diese werden wieder freigegeben, wenn sich die Anlage ihren Betriebszustand erreicht hat. Es wird die Ausbildung des thermischen Gleichgewichtes abgewartet. Zum Zeitpunkt der Probennahme wird ein Screenshot am Computer gemacht, Proben an den Sammelbehältern für Sumpf, Feed und Kopfprodukt genommen, und die Füllstände an den Sammelbehältern abgelesen, um daraus den Volumenstrom berechnen zu können. Es ist wichtig die Probennahmestellen vorher zu spülen, weil sich noch alte Mischung darin befindet. Zur Korrektur des Rücklufstroms ist außerdem die Verweilzeit des Magnetventils in der unterren Stellung zu dokumentieren.
+
+Die Flüssigkeitsproben werden im Dichte-Messgerät analysiert.
+
+Die Anlage wird heruntergefahren indem zuerst die Heizung abgeschalten wird. Anschließend wird der Inhalt der Sammelbehälter zurückgepumpt. Schließlich kann auch die Kühlwasserzufuhr und die Stromversorgung abgeschnitten werden.
