--- a/011_fehlerbetrachtung.tex
+++ b/011_fehlerbetrachtung.tex
@@ -7,3 +7,5 @@ Einige Berechnungen wurden von Hand gemacht. Im laufe der Auswertung könnten si
 
 
 Das Ausgleichen der Stoffbilanz mittels des \emph{solver}, beruht auf der Annahme, dass die Messung des Kopfproduktvolumenstromes fehlerfrei ist. Da dies keinesfalls sein kann, ist die Massenbilanz und darauf aufbauende Energiebilanz mit dem nötigen Abstand zu betrachten.
+
+Die Beispielrechnungen wurden zum Teil Händisch ausgeführt, weswegen die Ergebnisse durch Rundungsfehler etwas von den Ergebnissen aus der Tabellenkalkulation abweichen können.
