--- a/07_diskussion.tex
+++ b/07_diskussion.tex
@@ -16,7 +16,7 @@ Das Ausgleichen der Stoffbilanz mittels des \emph{solver}, beruht auf der Annahm
 	\centering
 	\caption{Vergleich der Ergebnisse aus händischer Berechnung zu den Ergebnissen des Programms VLE}
 	\label{tab:Vergleich}
-	%\resizebox{12.6cm}{!}{
+	\resizebox{16cm}{!}{
 	\begin{tabular}{|c|c|c|c|c|c|}
 		\hline
 		Versuch Nr. &Rücklaufverhältnis &$x_{1K}$ &McCabe-Thiele Stufenzahl & $\vartheta$(Sumpf)[\si{\degreeCelsius}] &$\vartheta$(Kopf) [\si{\degreeCelsius}] \\
@@ -35,7 +35,7 @@ Das Ausgleichen der Stoffbilanz mittels des \emph{solver}, beruht auf der Annahm
 		\hline
 		
 	\end{tabular}
-	%}
+	}
 \end{table}
 \FloatBarrier
 \vspace*{-2.5mm}
