--- a/09_anhang.tex
+++ b/09_anhang.tex
@@ -1,7 +1,109 @@
-%\section*{Anhang}
+\section*{Anhang}
 \addcontentsline{toc}{section}{Anhang}
-%\label{sec:anhang}
+\label{sec:anhang}
  
+:\begin{table}[h!]
+	\centering
+	\caption{Gegebene Daten zum Versuch (Datensatz J)}
+	\label{tab:Einwaagen}
+	\resizebox{12.6cm}{!}{
+		\begin{tabular}{|c|c|c|c|c|}
+			\hline
+\textbf{Größe}	& \textbf{Einheit}  & \textbf{Versuch 1} & \textbf{Versuch 2} & \textbf{Versuch 3} \\
+	\hline
+			$\rho_K$ & [kg/m3] & 832,3  & 867& 890,3\\
+				$\rho_F$ & [kg/m3] & 989,48& 989,48  & 989,48\\
+				$\rho_S$ & [kg/m3] & 997,67  & 997,7 & 997,9\\
+			&  &                    & &                    \\
+			$V_K$ & [L] & 0,1 & 0,1& 0,1\\
+			$t_K$  &     & 00:16:08  & 00:15:27           & 00:12:40  \\
+		$t_K$  & [s]  & 968  & 927                & 760  \\
+		$\dot{V}_K$ & [L/h] & 0,372 & 0,388 & 0,474\\
+			$\dot{V}_F$ & [L/h]   & 4,20 & 4,76 & 4,03  \\
+			&   &   &   &   \\
+			$\vartheta _K$    & [\si{\degreeCelsius}] & 78,9  & 82,25 & 85                 \\
+			$\vartheta _F$& [\si{\degreeCelsius}] & 21,65  & 20,1 & 20,3  \\
+			$\vartheta _S$                             & [\si{\degreeCelsius}]                    & 99,05              & 98,8               & 98,8               \\
+			&                             &                    &                    &                    \\
+			Kühler $\alpha$                      & [\si{\degreeCelsius}]                   & 13,3               & 12,8               & 12,5               \\
+			Kühler $\omega$                     & [\si{\degreeCelsius}]                    & 19,45              & 18,95              & 18,25              \\
+			$\dot{V}$  kühler                       & [L/h]                   & 28,25              & 28,5               & 28,45              \\
+			&                             &                    &                    &                    \\
+			$\dot{Q}$ Heizung $\alpha$                     & [Wh]                    & 1676,7             & 2330,1             & 2950,4             \\
+		$\dot{Q}$  Heizung $\omega$                    & [Wh]                    & 2035               & 2731,2             & 3297,9             \\
+			&                             &                    &                    &                    \\
+			Startzeit                      &                             & 09:46:19           & 10:18:11           & 10:48:26           \\
+			Endzeit                        &                             & 10:03:48           & 10:37:45           & 11:05:24           \\
+			$\Delta t$ Heizung                      &                             & 00:17:29           & 00:19:34           & 00:16:58           \\
+			$\Delta t$ Heizung                       & [s]                     & 1049               & 1174               & 1018               \\
+			&                             &                    &                    &                    \\
+			 $\dot{Q}$ Verlust  &  [W] &   \SI{637,5}{}                 &                    &                    \\
+			&                             &                    &                    &                    \\
+			t Rücklauf,Theorie              & [s]                     & 12                 & 10                 & 8                  \\
+			t Entnahme,Theorie              & [s]                     & 3                  & 3                  & 3                  \\
+			
+			t Totzeit                       & [s]                     & 0,99               & 0,99               & 0,99               \\
+			t Rücklauf,Praxis               & [s]                     & 11,01              & 9,01               & 7,01               \\
+			t Entnahme,Praxis               & [s]                     & 3,99               & 3,99               & 3,99              \\
+			\hline
+			
+		\end{tabular}
+	}
+\end{table}
+\FloatBarrier
+\vspace*{-2.5mm}
+%Tabelle Ende
  
+ :\begin{table}[h!]
+ 	\centering
+ 	\caption{Berechnungsergebnisse aus den Tabellenkalkulationsprogramm \emph{LibreOffice Calc} entsprechend der Formeln aus den obigen Beispielrechnungen}
+ 	\label{tab:Einwaagen}
+ 	\resizebox{12.6cm}{!}{
+ 		\begin{tabular}{|c|c|c|c|c|}
+ 				\hline
+ 				\textbf{Größe}	& \textbf{Einheit}  & \textbf{Versuch 1} & \textbf{Versuch 2} & \textbf{Versuch 3} \\
+ 				\hline
+ 		
+ 			$w_{1K} $            & & 0,845      & 0,707      & 0,608      \\
+ 			$w_{1F} $             & & 0,065      & 0,065      & 0,065      \\
+ 			$w_{1S} $              & & 0,004      & 0,004      & 0,002      \\
+ 			 & & & & \\
+ 			$x_{1K} $               & & 0,680      & 0,486      & 0,377      \\
+			$x_{1F} $                & & 0,026      & 0,026      & 0,026      \\
+ 			$x_{1S} $                 & & 0,002      & 0,002      & 0,001      \\
+ & & & & \\
+	 		$\dot{n}_{1K}$      &[mol/h] & 5,67       & 5,17       & 5,56       \\
+ 			$\dot{n}_{1F}$     &[mol/h] & 5,86       & 6,64       & 5,62       \\
+ & & & & \\
+ 			$\dot{n}_K$ original                        & [mol/h]& 8,34       & 10,64      & 14,74      \\
+ 			$\dot{n}_F$ original                 &[mol/h] & 221,31     & 250,98     & 212,42     \\
+ 			$\dot{n}_F$ aus solver              &[mol/h] & 235,60     & 214,57     & 223,46     \\
+ 			$\dot{n}_S$ aus solver              & [mol/h]& 227,27     & 203,93     & 208,72     \\
+ & & & & \\
+ 			Delta T$_K$             & [K]& 78,9       & 82,25      & 85         \\
+ 			Delta T$_F$             &[K] & 21,65      & 20,1       & 20,3       \\
+ 			Delta T$_S$             &[K] & 99,05      & 98,8       & 98,8       \\
+ 			& & & & \\
+ 			$\Delta$Q             & {[}Wh{]}& 358,3      & 401,1      & 347,5      \\
  
- 
+ 			Q Heizung           & {[}W{]}& 1.229,63   & 1.229,95   & 1.228,88   \\
+ 			Qkühlung          &{[}W{]}   & 202,57     & 204,36     & 190,73     \\
+ 			\hline
+ 			mittlere cp  & &            &            &            \\
+ 			K                          &{[}J/kmol*K{]} & 118.481,84 & 107.250,74 & 100.858,51 \\
+ 			F                          &{[}J/kmol*K{]} & 76.386,75  & 76.402,66  & 76.400,73  \\
+ 			S                          & {[}J/kmol*K{]}& 76.112,46  & 76.099,33  & 76.053,60  \\
+ 		\hline
+ 			& &            &            &            \\
+ 			$\dot{H}_K$                         &[W] & 21,67      & 26,07      & 35,11      \\
+ 			$\dot{H}_F$                         &[W] & 101,67     & 107,06     & 91,51      \\
+ 			$\dot{H}_S$                         & [W]& 493,38     & 448,13     & 466,42     \\
+ 			& &            &            &            \\
+ 			$\dot{Q}$ Verlust           &[W] & 613,68     & 658,45     & 628,13      	\\
+ 			\hline
+ 				\end{tabular}
+ 	}
+ \end{table}
+ \FloatBarrier
+ \vspace*{-2.5mm}
+ %Tabelle Ende
