--- a/07_diskussion.tex
+++ b/07_diskussion.tex
@@ -8,9 +8,7 @@ Aus den Berechnungen geht hervor, dass der Kopfproduktstrom bei sinkendem Rückl
 
 Der Vergleich der selbst berechneten Werte mit denen aus dem Programm VLE in Tabelle \ref{tab:Vergleich} ergibt, dass sich die Ergebnisse im großen und ganzen sehr ähneln. Die größten Abweichungen treten bei der Konstruktion des Mc-Cabe-Thiele Diagramms auf. Hier wurde eine theoretische Stufenzahl von 6, anstelle der 10 von VLE ermittelt. Das Ergebnis des Computerprogramms ist deutlich vertrauenswürdiger, da dabei die Lösung numerisch erfolgte. Die zeichnerische Lösung birgt durch die Ungenauigkeiten der Skalen ein hohes Potential für Abweichungen. Außerdem fällt auf, dass die Temperaturen am Kolonnenkopf um einige Kelvin höher sind als es durch das Programm prognostiziert wurde.
 
-Der berechnete Wärmeverlust entspricht mit den in Gleichung \eqref{gl:Energie-eingesetzt} berechneten \SI{637,5}{\watt} 52\% der Heizleistung. Dies ist aufgrund der vielen un-isolierten Bereiche an der Kolonne plausibel. Die Korrektur des Rücklaufverhältnisses war in den gegebenen Werten bereits erfolgt.
-
-Das Ausgleichen der Stoffbilanz mittels des \emph{solver}, beruht auf der Annahme, dass die Messung des Kopfproduktvolumenstromes fehlerfrei ist.
+Der berechnete Wärmeverlust entspricht mit den in Gleichung \eqref{gl:Energie-eingesetzt} berechneten \SI{637,5}{\watt} 52\% der Heizleistung. Dies ist aufgrund der vielen un-isolierten Bereiche an der Kolonne plausibel. Die Korrektur des Rücklaufverhältnisses war in den gegebenen Werten bereits erfolgt. Das Ausgleichen der Stoffbilanz mittels des \emph{solver}, beruht auf der Annahme, dass die Messung des Kopfproduktvolumenstromes fehlerfrei ist.
 
 \begin{table}[h!]
 	\centering
@@ -41,3 +39,5 @@ Das Ausgleichen der Stoffbilanz mittels des \emph{solver}, beruht auf der Annahm
 \vspace*{-2.5mm}
 %Tabelle Ende
 Das Konzentrationsprofil in Ober- und Untersäule lässt sich ebenfalls aus den Gleichgewichtsdiagrammen ableiten. Dazu wird Anzahl und Form der Stufen links und rechts von der Feedkonzentration betrachtet. Es ergibt sich, dass die Konzentrationssprünge in der Obersäule, in diesem Experiment, immer größer sind als die in der Untersäule. Eine hohe Reinheit des Kopfprodukts und kleine Rücklaufverhältnisse bewirken mehr Stufen in der Obersäule, während sehr geringe Leichtsiederkonzentrationen in Feed und Sumpf besonders für eine hohe Stufenzahl der Untersäule verantwortlich sind. Die Konzentrationsprünge zwischen den Stufen sind in der Obersäule besonders groß. Das ist schon an der Gleichgewichtskurve zu erkennen. Je weiter sich diese von der Diagonalen weg wölbt, desto besser lässt sich ein Gemisch destillieren/ rektifizieren. Ein wirkliches Konzentrationsprofil lässt sich aus den gegebenen Daten jedoch nicht ableiten. Dazu wären die Temperaturen auf den einzelnen Böden nötig, um aus den Siedepunkten die genaue Zusammensetzung auf den einzelnen Glockenböden abzuleiten.
+
+
