--- a/01_titel.tex
+++ b/01_titel.tex
@@ -63,7 +63,7 @@ Thermische Verfahrenstechnik\\
 
 \begin{center}
 \begin{tabular}{lll}
-%\large{\textbf{Protokollführer:}} & & \large{NAME}\\
+\large{\textbf{Protokollführer:}} & & \large{Willy Messerschmidt}\\
 &&\\
 \large{\textbf{Datum der Versuchsdurchführung:}}&& \large{ (Online)}\\
 &&\\
