--- a/04_physik.tex
+++ b/04_physik.tex
@@ -1,4 +1,4 @@
 \section{Theorie}
 \label{sec:theorie}
 
-Die Rektifikation als Sonderform der Destillation ist ein Trennverfahren für untereinander mischbare Flüssigkeiten. Der Mischung wird dazu wärmu zugeführt, bis eine teilweise Verdampfung eintritt. Der gewonnene Dampf unterscheidet sich in der Zusammensetzung von der des flüssigen gemisches. Durch die räumlich getrennte Kondensation dieses Dampfes findet eine Anreicherung einer Komponente im Kondensat statt. Bei der Rektifikation wird diese Anreicherung durch die spezielle Bauform einer Destillationskolonne (in diesem Falle Glockenbodenkolonne) viele Male enrgiesparend wiederholt.
+Die Rektifikation als Sonderform der Destillation ist ein Trennverfahren für untereinander mischbare Flüssigkeiten. Der Mischung wird dazu Wärme zugeführt, bis eine teilweise Verdampfung eintritt. Der gewonnene Dampf unterscheidet sich in der Zusammensetzung von der des flüssigen Gemisches. Durch die räumlich getrennte Kondensation dieses Dampfes findet eine Anreicherung einer Komponente im Kondensat statt. Bei der Rektifikation wird diese Anreicherung durch die spezielle Bauform einer Destillationskolonne (in diesem Falle Glockenbodenkolonne) viele Male energiesparend wiederholt.
