--- a/011_fehlerbetrachtung.tex
+++ b/011_fehlerbetrachtung.tex
@@ -1,11 +1,11 @@
 \section{Fehlerbetrachtung}
 \label{sec:fehler}
 
-Alle Messonden sind Fehlerbehaftet. Die digitale Kontrollwarte am PC verhindert einige Ablesefehler. Selbige könnten aber beim ablesen der Volumina trotzdem aufgetreten sein. Die Wärmekapazität wurde als Reienentwicklung in die Gleichungen einbezogen. Dieses Verfahren beruht auf einer Annäherung an den realen Verlauf dieser Größe. Die Regressionsgleichung vierten Grades ist als sehr genau einzustufen und wird daher nicht angezweifelt. Ebenso ist die Dichtemessung mit dem sehr präzisen Messgerät als praktisch fehlerfrei zu sehen.
+Alle Messsonden sind fehlerbehaftet. Die digitale Kontrollwarte am PC verhindert einige Ablesefehler. Selbige könnten aber beim Ablesen der Volumina trotzdem aufgetreten sein. Die Wärmekapazität wurde als Reihenentwicklung in die Gleichungen einbezogen. Dieses Verfahren beruht auf einer Annäherung an den realen Verlauf dieser Größe. Die Regressionsgleichung vierten Grades ist als sehr genau einzustufen und wird daher nicht angezweifelt. Ebenso ist die Dichtemessung mit dem sehr präzisen Messgerät als praktisch fehlerfrei zu sehen.
 
-Einige Berechnungen wurden von Hand gemacht. Im laufe der Auswertung könnten sich Übertragungsfehler eingeschlichen haben. Es ist sehr auffällig, dass die zeichnerische Bestimmung der Stufenzahl im McCabe-Thiele-Diagramm sehr Fehleranfällig ist. Das Ablesen und eintragen in an den Koordinatenachsen basiert auf dem Abschätzen von Zahlenwerten zwischen der groben einteilung. besonders am unteren Ende, wo die Konzentration von Feed und Sumpf sehr nah beieinander liegen, ist eine ausreichend genaue Eintragung unmöglich. Daher sind die Ergebnisse des Computerprogramms VLE als richtig anzunehmen.
+Einige Berechnungen wurden von Hand durchgeführt. Im Laufe der Auswertung sind entstandene Übertragungsfehler nicht auszuschließen. Es ist sehr auffällig, dass die zeichnerische Bestimmung der Stufenzahl im \textsc{McCabe}-\textsc{Thiele}-Diagramm sehr fehleranfällig ist. Das Ablesen und Eintragen in an den Koordinatenachsen basiert auf dem Abschätzen von Zahlenwerten zwischen der groben Einteilung. Besonders am unteren Ende, wo die Konzentration von Feed und Sumpf sehr nah beieinander liegen, ist eine ausreichend genaue Eintragung nur schwer möglich. Daher sind die Ergebnisse des Computerprogramms VLE als richtig anzunehmen.
 
 
 Das Ausgleichen der Stoffbilanz mittels des \emph{solver}, beruht auf der Annahme, dass die Messung des Kopfproduktvolumenstromes fehlerfrei ist. Da dies keinesfalls sein kann, ist die Massenbilanz und darauf aufbauende Energiebilanz mit dem nötigen Abstand zu betrachten.
 
-Die Beispielrechnungen wurden zum Teil Händisch ausgeführt, weswegen die Ergebnisse durch Rundungsfehler etwas von den Ergebnissen aus der Tabellenkalkulation abweichen können.
+Die Beispielrechnungen wurden zum Teil händisch ausgeführt, weswegen die Ergebnisse durch Rundungsfehler etwas von den Ergebnissen aus der Tabellenkalkulation abweichen können.
